--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <a class="nav-link page-scroll" href="#contact">Contato</a>
                         </li>
                         <li>
-                            <button class="btn btn-primary" href="/Users/nathanmeira/Downloads/beam-master/login.html">Login</button>
+                            <a class="btn btn-primary" href="login.html">Login</a>
                         </li>
                     </ul>
 
@@ -198,7 +198,7 @@
                         <p>
                             A Bookeepers está presente em todo o território nacional por meio de uma rede de associados,  capacitados periodicamente e que recebem todo o suporte comercial e técnico para levar para sua região soluções tributárias focadas na geração de resultados, com agilidade, responsabilidade e efetividade.
                         </p>
-                        <button class="btn btn-secondary" type="button">Learn More</button>
+                        <button class="btn btn-secondary" type="button">Saiba Mais</button>
                     </div>
                 </div>
             </div>
@@ -225,43 +225,43 @@
                     <div class="feature-icon">
                         <i data-vi="processor" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
                     </div>
-                    <h4>UI/UX Design</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
+                    <h4>BKPS DF-e</h4>
+                    <p>Base de DF-e (Documentos Fiscais Eletrônicos), com validade jurídica e eventos de correção, cancelamento e manifestação monitorados.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
                     <div class="feature-icon">
                         <i data-vi="newspaper" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
                     </div>
-                    <h4>Branding</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
+                    <h4>BKPS ICMS</h4>
+                    <p>Ressarcimento, Complemento e Crédito de ICMS nas operações próprias e na condição de Substituto Tributário.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
                     <div class="feature-icon">
                         <i data-vi="controller" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
                     </div>
-                    <h4>Easy To Use</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
+                    <h4>BKPS Message</h4>
+                    <p>Monitoramento de notificações oficiais da administração pública Federal, Estadual e Municipal recebidas através do Domicílio tributário Eletrônico.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay=".8s">
                     <div class="feature-icon">
                         <i data-vi="doc" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
                     </div>
-                    <h4>Pre-Planning</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
+                    <h4>BKPS PERDCOMP</h4>
+                    <p>Monitoramento de Pedido Eletrônico de Restituição, Ressarcimento ou Reembolso e Declaração de Compensação.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay="1s">
                     <div class="feature-icon">
                         <i data-vi="user" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
                     </div>
-                    <h4>User Friendly</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
+                    <h4>BKPS Analytics</h4>
+                    <p>Relatórios avançados de análise tributária de obrigações acessórias com o olhar especialista da BKPS.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay="1.2s">
                     <div class="feature-icon">
                         <i data-vi="cloud" data-vi-primary="#60b6f4" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
                     </div>
-                    <h4>Cloud Service</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
+                    <h4>BKPS PIS/COFINS</h4>
+                    <p>Relatórios avançados de análise tributária de obrigações acessórias com o olhar especialista da BKPS.</p>
                 </div>
             </div>
         </div>
@@ -292,7 +292,7 @@
                             <p class="quote">" Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. "</p>
                             <img src="imgs/2.png" class="img-fluid" alt="2">
                             <h4>Cristiane Monteiro</h4>
-                            <span>Diretora de Relacionamentos</span>
+                            <span>Sócia</span>
                         </div>
                         <div class="item">
                             <div class="testi-icon">
@@ -399,14 +399,14 @@
             </div>
             <div class="row">
                 <div id="owl-screenshots">
-                    <div class="item"><img src="imgs/screenshots/1.png" class="img-fluid" alt="screen-1"></div>
-                    <div class="item"><img src="imgs/screenshots/2.png" class="img-fluid" alt="screen-2"></div>
-                    <div class="item"><img src="imgs/screenshots/3.png" class="img-fluid" alt="screen-3"></div>
-                    <div class="item"><img src="imgs/screenshots/1.png" class="img-fluid" alt="screen-1"></div>
-                    <div class="item"><img src="imgs/screenshots/2.png" class="img-fluid" alt="screen-2"></div>
-                    <div class="item"><img src="imgs/screenshots/3.png" class="img-fluid" alt="screen-3"></div>
-                    <div class="item"><img src="imgs/screenshots/1.png" class="img-fluid" alt="screen-1"></div>
-                    <div class="item"><img src="imgs/screenshots/2.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/screenshots/app1.png" class="img-fluid" alt="screen-1"></div>
+                    <div class="item"><img src="imgs/screenshots/app2.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/screenshots/app3.png" class="img-fluid" alt="screen-3"></div>
+                    <div class="item"><img src="imgs/screenshots/app4.png" class="img-fluid" alt="screen-4"></div>
+                    <div class="item"><img src="imgs/screenshots/app2.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/screenshots/app3.png" class="img-fluid" alt="screen-3"></div>
+                    <div class="item"><img src="imgs/screenshots/app1.png" class="img-fluid" alt="screen-1"></div>
+                    <div class="item"><img src="imgs/screenshots/app4.png" class="img-fluid" alt="screen-2"></div>
                 </div>
             </div>
         </div>
@@ -468,7 +468,7 @@
                         <img src="imgs/team/Cristiane-Monteiro.png" class="img-fluid" alt="team-2">
                     </div>
                     <h4>Cristiane Monteiro</h4>
-                    <p>Diretora de Relacionamento</p>
+                    <p>Sócia</p>
                     <ul class="social-media">
                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
