--- a/dfe.html
+++ b/dfe.html
@@ -94,8 +94,9 @@
                 <div class="row">
                     <div class="col-md-8 offset-md-2">
                         <div class="caption">
-                            <h1 class="section-title">BOOKEEPERS</h1>
-                            <h3 class="sub">Clique para acessar a ferramenta desejada</h3>
+                            <h1 class="section-title">BKPS DF-e</h1>
+                            <h2 class="sub">Sua base de DF-e completa, com validade jurídica e eventos de correção, cancelamento e manifestação monitorados.</h2>
+                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/dfe1.png" alt="dfe">
                             <br/>
                         </div>
                     </div>
@@ -111,23 +112,37 @@
     <section id="about">
         <div class="container">
             <div class="row mx-auto">
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <i data-vi="website" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                    <h4>GED BKPS</h4>
-                    <p>Gestor de Documentos Fiscais Eletrônicos</p>
-                    <a class="btn btn-block btn-secondary" href="https://ged.bkps.com.br">Login</a>
+                <div class="col-md wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
+                    <h4>O que é um documento fiscal eletrônico (DF-e)?</h4>
+                    <br/>
+                    <p>Podemos conceituar um Documento Fiscal Eletrônico (DF-e) como sendo um documento de existência apenas digital,
+                        juridicamente válido, emitido e armazenado eletronicamente, com o intuito de documentar, para fins fiscais,
+                        uma operação de circulação de mercadorias ou uma prestação de serviços,
+                        ocorrida entre empresas ou entre elas e o consumidor final.</p>
                 </div>
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
-                    <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                    <h4>BKPS Platform</h4>
-                    <p>Plataforma de soluções tecnológicas desenvolvida pela BKPS</p>
-                    <a class="btn btn-block btn-secondary" href="https://platform.bkps.com.br">Login</a>
-                </div>
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
-                    <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                    <h4>Agenda BKPS</h4>
-                    <p>CRM dos associados/parceiros Bookeepers</p>
-                    <a class="btn btn-block btn-secondary" href="https://agenda.bkps.com.br">Login</a>
+            </div>
+            <br/>
+            <br/>
+            <div class="col-md wow fadeIn" data-wow-duration=".5s" data-wow-delay=".2s" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                <h4>São exemplos de documentos fiscais eletrônicos:</h4>
+                <br/>
+                <ul class="list-unstyled">
+                    <li><svg width="20" height="20" viewBox="0 0 48 48">    <path class="vi-primary" d="M16,32l3,3L37,17l-3-3Z" style="fill: rgb(25, 146, 236);"></path>  <path class="vi-accent" d="M22,32l-3,3-8-8,3-3Z" style="fill: rgb(25,146,236);"></path></svg> <span>NF-e – Nota Fiscal Eletrônica – Modelo 55</span></li>
+                    <li><svg width="20" height="20" viewBox="0 0 48 48">    <path class="vi-primary" d="M16,32l3,3L37,17l-3-3Z" style="fill: rgb(25, 146, 236);"></path>  <path class="vi-accent" d="M22,32l-3,3-8-8,3-3Z" style="fill: rgb(25,146,236);"></path></svg> <span>CT-e – Conhecimento de Transporte Eletrônico – Modelo 57</span></li>
+                    <li><svg width="20" height="20" viewBox="0 0 48 48">    <path class="vi-primary" d="M16,32l3,3L37,17l-3-3Z" style="fill: rgb(25, 146, 236);"></path>  <path class="vi-accent" d="M22,32l-3,3-8-8,3-3Z" style="fill: rgb(25,146,236);"></path></svg> <span>CF-e SAT – Cupom Fiscal Eletrônico – Modelo 59</span></li>
+                    <li><svg width="20" height="20" viewBox="0 0 48 48">    <path class="vi-primary" d="M16,32l3,3L37,17l-3-3Z" style="fill: rgb(25, 146, 236);"></path>  <path class="vi-accent" d="M22,32l-3,3-8-8,3-3Z" style="fill: rgb(25,146,236);"></path></svg> <span>CF-e ECF – Cupom Fiscal Eletrônico – Modelo 60</span></li>
+                    <li><svg width="20" height="20" viewBox="0 0 48 48">    <path class="vi-primary" d="M16,32l3,3L37,17l-3-3Z" style="fill: rgb(25, 146, 236);"></path>  <path class="vi-accent" d="M22,32l-3,3-8-8,3-3Z" style="fill: rgb(25,146,236);"></path></svg> <span>CF-e SAT – Cupom Fiscal Eletrônico – Modelo 59</span></li>
+                    <li><svg width="20" height="20" viewBox="0 0 48 48">    <path class="vi-primary" d="M16,32l3,3L37,17l-3-3Z" style="fill: rgb(25, 146, 236);"></path>  <path class="vi-accent" d="M22,32l-3,3-8-8,3-3Z" style="fill: rgb(25,146,236);"></path></svg> <span>BP-e – Bilhete de Passagem Eletrônico – Modelo 63</span></li>
+                    <li><svg width="20" height="20" viewBox="0 0 48 48">    <path class="vi-primary" d="M16,32l3,3L37,17l-3-3Z" style="fill: rgb(25, 146, 236);"></path>  <path class="vi-accent" d="M22,32l-3,3-8-8,3-3Z" style="fill: rgb(25,146,236);"></path></svg> <span>NFC-e – Nota Fiscal Eletrônica Consumidor Final – Modelo 65</span></li>
+                    <li><svg width="20" height="20" viewBox="0 0 48 48">    <path class="vi-primary" d="M16,32l3,3L37,17l-3-3Z" style="fill: rgb(25, 146, 236);"></path>  <path class="vi-accent" d="M22,32l-3,3-8-8,3-3Z" style="fill: rgb(25,146,236);"></path></svg> <span>CT-e OS – Conhecimento de Transporte Eletrônico – OS – Modelo 67</span></li>
+                </ul>
+            </div>
+            <div class="row mx-auto">
+                <div class="col-md wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
+                    <br/>
+                    <br/>
+                    <p>Desfrute do universo de soluções tecnológicas preparadas pela BKPS para apoiá-lo na busca constante
+                        por redução de custos e riscos e o aumento da performance e governança do seu negócio.</p>
                 </div>
             </div>
         </div>
