--- a/message.html
+++ b/message.html
@@ -94,8 +94,9 @@
                 <div class="row">
                     <div class="col-md-8 offset-md-2">
                         <div class="caption">
-                            <h1 class="section-title">BOOKEEPERS</h1>
-                            <h3 class="sub">Clique para acessar a ferramenta desejada</h3>
+                            <h1 class="section-title">BKPS Message</h1>
+                            <h2 class="sub">Monitoramento de notificações oficiais da administração pública Federal, Estaduais e Municipais via Domicílio Tributário Eletrônico. </h2>
+                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/message1.png" alt="dfe">
                             <br/>
                         </div>
                     </div>
@@ -111,23 +112,18 @@
     <section id="about">
         <div class="container">
             <div class="row mx-auto">
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <i data-vi="website" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                    <h4>GED BKPS</h4>
-                    <p>Gestor de Documentos Fiscais Eletrônicos</p>
-                    <a class="btn btn-block btn-secondary" href="https://ged.bkps.com.br">Login</a>
+                <div class="col-md wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
+                    <h4>Título</h4>
+                    <br/>
+                    <p>Texto sobre o BKPS Message.</p>
                 </div>
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
-                    <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                    <h4>BKPS Platform</h4>
-                    <p>Plataforma de soluções tecnológicas desenvolvida pela BKPS</p>
-                    <a class="btn btn-block btn-secondary" href="https://platform.bkps.com.br">Login</a>
-                </div>
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
-                    <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                    <h4>Agenda BKPS</h4>
-                    <p>CRM dos associados/parceiros Bookeepers</p>
-                    <a class="btn btn-block btn-secondary" href="https://agenda.bkps.com.br">Login</a>
+            </div>
+            <div class="row mx-auto">
+                <div class="col-md wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
+                    <br/>
+                    <br/>
+                    <p>Desfrute do universo de soluções tecnológicas preparadas pela BKPS para apoiá-lo na busca constante
+                        por redução de custos e riscos e o aumento da performance e governança do seu negócio.</p>
                 </div>
             </div>
         </div>
