--- a/equipe.html
+++ b/equipe.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/preloader.css">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="imgs/favicon-32x32.png">
     <title>BKPS</title>
 </head>
 
