nº 6 (general fixes)

--- a/abdon-meira.html
+++ b/abdon-meira.html
@@ -67,35 +67,28 @@
     =============================================== -->
 
     <header id="home">
+
+        <!-- /// Navbar /// -->
+
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <a class=" navbar-brand" href="index.html">BOOKEEPERS</a>
+                <!-- // Brand // -->
+
+                <a class="navbar-brand" href="#">BOOKEEPERS</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="material-icons">menu</i></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
+                    <!-- / NavLinks / -->
+
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#home">Início</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link page-scroll" href="platform.html">Soluções</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link page-scroll" href="equipe.html">Equipe</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link page-scroll" href="clientes.html">Clientes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#contact">Contato</a>
-                        </li>
                         <li>
-                            <a class="btn btn-primary" href="login.html">Login</a>
+                            <a class="btn btn-primary" href="index.html">Ir para home</a>
                         </li>
                     </ul>
 
                 </div>
             </div>
         </nav>
+
         <!-- /// BANNER /// -->
         <div class="banner">
             <div class="container">
@@ -103,35 +96,31 @@
                     <div class="col-md-8 offset-md-2">
                         <div class="caption">
                             <h1 class="section-title">BOOKEEPERS</h1>
-                            <h3 class="sub">Clique para acessar a ferramenta desejada</h3>
                             <br/>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </header>
 
     <!-- ==============================================
-    ABOUT 
+    TEAM
     =============================================== -->
 
-    <section id="about">
+    <section id="team">
         <div class="container">
-            <div class="row mx-auto">
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <h4>GED BKPS</h4>
-                    <p>Gestor de Documentos Fiscais Eletrônicos</p>
-                    <a class="btn btn-block btn-secondary" href="https://ged.bkps.com.br">Login</a>
-                </div>
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".3s">
-                    <h4>BKPS Platform</h4>
-                    <p>Plataforma de soluções tecnológicas desenvolvida pela BKPS</p>
-                    <a class="btn btn-block btn-secondary" href="https://platform.bkps.com.br">Login</a>
-                </div>
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
-                    <h4>Agenda BKPS</h4>
-                    <p>CRM dos associados/parceiros Bookeepers</p>
-                    <a class="btn btn-block btn-secondary" href="https://agenda.bkps.com.br">Login</a>
+            <div class="row mb-5">
+                <!-- /// TEAM MEMBERS /// -->
+                <div class="col-md-4 mx-auto member wow fadeInDown" data-wow-duration=".5s" data-wow-delay=".3s">
+                    <div class="member-img">
+                        <img src="imgs/team/team-3.png" class="img-fluid" alt="team-1">
+                    </div>
+                    <h4>Abdon Meira Neto</h4>
+                    <p>CEO Fundador</p>
+                    <ul class="social-media">
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
