--- a/dfe.html
+++ b/dfe.html
@@ -67,28 +67,35 @@
     =============================================== -->
 
     <header id="home">
-
-        <!-- /// Navbar /// -->
-
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <!-- // Brand // -->
-
-                <a class="navbar-brand" href="#">BOOKEEPERS</a>
+                <a class=" navbar-brand" href="index.html">BOOKEEPERS</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="material-icons">menu</i></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <!-- / NavLinks / -->
-
                     <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#home">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="platform.html">Soluções</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="equipe.html">Equipe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="clientes.html">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#contact">Contato</a>
+                        </li>
                         <li>
-                            <a class="btn btn-primary" href="index.html">Ir para home</a>
+                            <a class="btn btn-primary" href="login.html">Login</a>
                         </li>
                     </ul>
 
                 </div>
             </div>
         </nav>
-
         <!-- /// BANNER /// -->
         <div class="banner">
             <div class="container">
@@ -97,14 +104,16 @@
                         <div class="caption">
                             <h1 class="section-title">BKPS DF-e</h1>
                             <h2 class="sub">Sua base de DF-e completa, com validade jurídica e eventos de correção, cancelamento e manifestação monitorados.</h2>
-                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/dfe1.png" alt="dfe">
                             <br/>
                         </div>
+                    </div>
+                    <div class="col-md-12">
+                        <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/dfe1.png" alt="dfe">
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+
 
     <!-- ==============================================
     ABOUT 
@@ -113,7 +122,7 @@
     <section id="about">
         <div class="container">
             <div class="row mx-auto">
-                <div class="col-md wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md" data-wow-duration=".5s" data-wow-delay=".2s">
                     <h4>O que é um documento fiscal eletrônico (DF-e)?</h4>
                     <br/>
                     <p>Podemos conceituar um Documento Fiscal Eletrônico (DF-e) como sendo um documento de existência apenas digital,
@@ -124,7 +133,7 @@
             </div>
             <br/>
             <br/>
-            <div class="col-md wow fadeIn" data-wow-duration=".5s" data-wow-delay=".2s" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.2s; animation-name: fadeInLeft;">
+            <div class="col-md">
                 <h4>São exemplos de documentos fiscais eletrônicos:</h4>
                 <br/>
                 <ul class="list-unstyled">
@@ -139,11 +148,15 @@
                 </ul>
             </div>
             <div class="row mx-auto">
-                <div class="col-md wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md" data-wow-duration=".5s" data-wow-delay=".2s">
                     <br/>
                     <br/>
                     <p>Desfrute do universo de soluções tecnológicas preparadas pela BKPS para apoiá-lo na busca constante
                         por redução de custos e riscos e o aumento da performance e governança do seu negócio.</p>
+                    <br/>
+                    <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".3s">
+                        <a class="btn btn-secondary" href="http://platform.bkps.com.br">CLIQUE AQUI PARA ACESSAR</a>
+                    </div>
                 </div>
             </div>
         </div>
