--- a/platform.html
+++ b/platform.html
@@ -67,28 +67,36 @@
     =============================================== -->
 
     <header id="home">
-
-        <!-- /// Navbar /// -->
-
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <!-- // Brand // -->
-
-                <a class="navbar-brand" href="#">BOOKEEPERS</a>
+                <a class=" navbar-brand" href="index.html">BOOKEEPERS</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="material-icons">menu</i></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <!-- / NavLinks / -->
-
                     <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#home">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="platform.html">Soluções</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="equipe.html">Equipe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="clientes.html">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#contact">Contato</a>
+                        </li>
                         <li>
-                            <a class="btn btn-primary" href="index.html">Ir para home</a>
+                            <a class="btn btn-primary" href="login.html">Login</a>
                         </li>
                     </ul>
 
                 </div>
             </div>
         </nav>
-
+    </header>
         <!-- /// BANNER /// -->
         <div class="banner">
             <div class="container">
@@ -97,14 +105,12 @@
                         <div class="caption">
                             <h1 class="section-title">BKPS Platform</h1>
                             <h2 class="sub">Reduza custos e riscos e aumente a performance e a governança do seu negócio.</h2>
-                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/platform1.png" alt="dfe">
                             <br/>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
 
     <!-- ==============================================
     ABOUT 
@@ -131,11 +137,11 @@
             <br/>
 
             <div class="row mx-auto">
-                <div class="col-md-6 wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-12 wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
                     <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/login.png" alt="dfe">
                 </div>
-                <div class="col-md-6 wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/settings.png" alt="dfe">
+                <div class="col-md-12 wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
+                    <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/workstation.png" alt="dfe">
                 </div>
             </div>
 
@@ -174,26 +180,35 @@
 
                         <div class="col-md-4 wow" data-wow-duration=".5s" data-wow-delay=".4s">
                             <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                            <h4>BKPS ICMS</h4>
-                            <p>Ressarcimento, Complemento e Crédito de ICMS nas operações próprias e na condição de Substituto Tributário.</p>
-                            <br/>
-                            <a class="btn btn-block btn-secondary" href="#">Saiba Mais</a>
+                            <h4>BKPS Message</h4>
+                            <p>Monitoramento de notificações da administração pública Federal, Estadual e Municipal recebidas através do Domicílio tributário Eletrônico.</p>
+                            <a class="btn btn-block btn-secondary" href="message.html">Saiba Mais</a>
                         </div>
 
                         <div class="col-md-4 wow" data-wow-duration=".5s" data-wow-delay=".4s">
                             <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                            <h4>BKPS Message</h4>
-                            <p>Monitoramento de notificações oficiais da administração pública Federal, Estadual e Municipal recebidas através do Domicílio tributário Eletrônico.</p>
-                            <a class="btn btn-block btn-secondary" href="message.html">Saiba Mais</a>
+                            <h4>BKPS PERDCOMP</h4>
+                            <p>Monitoramento de Pedido Eletrônico de Restituição, Ressarcimento ou Reembolso e Declaração de Compensação.</p>
+                            <br/>
+                            <a class="btn btn-block btn-secondary" href="perdcomp.html">Saiba Mais</a>
                         </div>
+
                     </div>
                     <br/>
                     <div class="row mx-auto">
                         <div class="col-md-4 wow" data-wow-duration=".5s" data-wow-delay=".4s">
                             <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                            <h4>BKPS PERDCOMP</h4>
-                            <p>Monitoramento de Pedido Eletrônico de Restituição, Ressarcimento ou Reembolso e Declaração de Compensação.</p>
-                            <a class="btn btn-block btn-secondary" href="perdcomp.html">Saiba Mais</a>
+                            <h4>BKPS Tables</h4>
+                            <p>Repositório central de tabelas públicas (NCM, CFOP, CST, CNAE, Alíquotas, Monofásico) e tabelas privadas necessárias para apoiar o seu negócio.</p>
+                            <a class="btn btn-block btn-secondary" href="tables.html">Saiba Mais</a>
+                        </div>
+
+                        <div class="col-md-4 wow" data-wow-duration=".5s" data-wow-delay=".4s">
+                            <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
+                            <h4>BKPS ICMS</h4>
+                            <p>Ressarcimento, Complemento e Crédito de ICMS nas operações próprias e na condição de Substituto Tributário.</p>
+                            <br/>
+                            <a class="btn btn-block btn-secondary" href="icms.html">Saiba Mais</a>
                         </div>
 
                         <div class="col-md-4 wow" data-wow-duration=".5s" data-wow-delay=".4s">
@@ -201,15 +216,26 @@
                             <h4>BKPS Analytics</h4>
                             <p>Relatórios avançados de análise tributária de obrigações acessórias com o olhar especialista da BKPS.</p>
                             <br/>
-                            <a class="btn btn-block btn-secondary" href="#">Saiba Mais</a>
+                            <br/>
+                            <a class="btn btn-block btn-transparent" href="#">EM BREVE!</a>
+                        </div>
+                    </div>
+                    <br/>
+                    <div class="row mx-auto">
+                        <div class="col-md-4 wow" data-wow-duration=".5s" data-wow-delay=".4s">
+                            <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
+                            <h4>BKPS PIS/COFINS</h4>
+                            <p>Análises das operações do PIS e COFINS, com foco em redução da carga tributária, eliminação de pagamentos indevidos e recuperação de créditos.</p>
+                            <br/>
+                            <a class="btn btn-block btn-transparent" href="#">EM BREVE!</a>
                         </div>
 
                         <div class="col-md-4 wow" data-wow-duration=".5s" data-wow-delay=".4s">
                             <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                            <h4>BKPS PIS/COFINS</h4>
-                            <p>Relatórios avançados de análise tributária de obrigações acessórias com o olhar especialista da BKPS.</p>
+                            <h4>BKPS IRPJ/CSLL</h4>
+                            <p>Análises das operações do IRPJ e CSLL, com foco em redução da carga tributária, eliminação de pagamentos indevidos e controle de ajustes fiscais.</p>
                             <br/>
-                            <a class="btn btn-block btn-secondary" href="#">Saiba Mais</a>
+                            <a class="btn btn-block btn-transparent" href="#">EM BREVE!</a>
                         </div>
                     </div>
                 </div>
@@ -217,11 +243,14 @@
 
             <div class="row mx-auto">
                 <div class="col-md wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <br/>
-                    <br/>
                     <p>Desfrute do universo de soluções tecnológicas preparadas pela BKPS para apoiá-lo na busca constante
                         por redução de custos e riscos e o aumento da performance e governança do seu negócio.</p>
                 </div>
+            </div>
+            <br/>
+
+            <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".3s">
+                <a class="btn btn-secondary" href="http://platform.bkps.com.br">CLIQUE AQUI PARA ACESSAR</a>
             </div>
         </div>
     </section>
