--- a/equipe.html
+++ b/equipe.html
@@ -67,27 +67,36 @@
     =============================================== -->
 
     <header id="home">
-
-        <!-- /// Navbar /// -->
-
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <!-- // Brand // -->
-
-                <a class="navbar-brand" href="#">BOOKEEPERS</a>
+                <a class=" navbar-brand" href="index.html">BOOKEEPERS</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="material-icons">menu</i></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <!-- / NavLinks / -->
-
                     <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#home">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="platform.html">Soluções</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="equipe.html">Equipe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="clientes.html">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#contact">Contato</a>
+                        </li>
                         <li>
-                            <a class="btn btn-primary" href="index.html">Ir para home</a>
+                            <a class="btn btn-primary" href="login.html">Login</a>
                         </li>
                     </ul>
 
                 </div>
             </div>
         </nav>
+    </header>
 
         <!-- /// BANNER /// -->
         <div class="banner">
@@ -103,7 +112,6 @@
                 </div>
             </div>
         </div>
-    </header>
 
     <!-- ==============================================
     TEAM
@@ -113,126 +121,140 @@
         <div class="container">
             <div class="row mb-5">
                 <!-- /// TEAM MEMBERS /// -->
-                <div class="col-md-4 mx-auto member wow fadeInDown" data-wow-duration=".5s" data-wow-delay=".3s">
+                <div class="col-md-4 mx-auto member" data-wow-duration=".5s" data-wow-delay=".3s">
                     <div class="member-img">
                         <img src="imgs/team/team-3.png" class="img-fluid" alt="team-1">
                     </div>
                     <h4>Abdon Meira Neto</h4>
-                    <p>CEO Fundador</p>
+                    <p>CEO / Fundador</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <li>Advogado tributarista com graduação em Administração de Empresas e Contabilidade;</li>
+                    <li>Mestre em Controladoria e Contabilidade Estratégica pela FECAP;</li>
+                    <li>Especialista em Direito Tributário pela FGV-SP;</li>
+                    <li>Especialista em Politica e Estratégia pela USP;</li>
+                    <li>Palestrante e professor universitário;</li>
+                    <li>Atua há mais de 20 anos na área tributária.</li>
                 </div>
             </div>
             <div class="row mb-5">
-                <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/Cristiane-Monteiro.png" class="img-fluid" alt="team-2">
                     </div>
                     <h4>Cristiane Monteiro</h4>
                     <p>Sócia</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <li>Atua há mais de 10 anos na área tributária;</li>
+                    <li>Graduada em Ciências Contábeis pela UFRGS;</li>
+                    <li>Pós-Graduada em Gestão Empresarial.</li>
                 </div>
-                <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/Edson-Yamamoto.png" class="img-fluid" alt="team-3">
                     </div>
                     <h4>Edson Yamamoto</h4>
                     <p>Sócio</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <li>Graduado em Ciências Contábeis;</li>
+                    <li>Pós-Graduado e Mestre em Administração de Empresas </li>
+                    <li>Doutor em Ciências – Unifesp;</li>
+                    <li>Professor titular da Universidade Paulista – UNIP, em cursos de graduação e Professor de MBA e Mestrado Profissionalizante da Unifesp;</li>
+                    <li>Advogado;</li>
+                    <li>Pós-graduado no Japão na Ehime University.</li>
                 </div>
-                <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/FERNANDO-NOGUEIRA.png" class="img-fluid" alt="team-3">
                     </div>
                     <h4>Fernando Nogueira</h4>
                     <p>Sócio</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <li>Graduado em contabilidade pela FEA/USP;</li>
+                    <li>Pós-graduado em MBA em Gestão Tributária pelo Instituto Naciona de Pós-Graduação – INPG/SP;</li>
+                    <li>Pós-graduando no Curso de Especialização em Administração para Graduados – CEAG/FGV;</li>
+                    <li>Professor de cursos de pós-graduação pelo Instituto Nacional de Pós Graduação INPG – Gestão Tributária;</li>
+                    <li>Pós graduando em Direito Tributário pela ESMAFE-RS;</li>
+                    <li>Atua há mais de 15 anos na área tributária.</li>
                 </div>
-                <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/penazzo.png" class="img-fluid" alt="team-3">
                     </div>
                     <h4>Fernando Penazzo</h4>
                     <p>Sócio</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </div>
             </div>
             <div class="row ">
-                <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/NEI.png" class="img-fluid" alt="team-3">
                     </div>
                     <h4>Nei Silva</h4>
                     <p>Sócio</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <li>Atua há mais de 20 anos na área Tributária;</li>
+                    <li>Advogado;</li>
+                    <li>Pós Graduado em Direito Tributário pela PUC/SP;</li>
+                    <li>Graduado em Ciências Contábeis pelo Mackenzie;</li>
+                    <li>Possui larga experiência em Tributos Indiretos – ICMS, ICMS substituição Tributária, IPI, PIS e COFINS.</li>
                 </div>
-                <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/Nelson.png" class="img-fluid" alt="team-3">
                     </div>
                     <h4>Nelson Freitas</h4>
                     <p>Sócio</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <li>Atua há mais de 15 anos na Área Tributária;</li>
+                    <li>Advogado;</li>
+                    <li>Pós Graduado em Direito Tributário pela PUC/SP;</li>
+                    <li>Possui larga experiência em Tributos Indiretos – ICMS, ICMS ST, IPI, PIS e COFINS.</li>
                 </div>
-                <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/RODRIGO.png" class="img-fluid" alt="team-3">
                     </div>
                     <h4>Rodrigo Giovanelli</h4>
                     <p>Sócio</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <li>Atua há mais de 15 anos na área Tributária;</li>
+                    <li>Graduado em Ciências Contábeis pelo Mackenzie;</li>
+                    <li>Possui larga experiência em Tributos Indiretos – ICMS, IPI, PIS e COFINS;</li>
+                    <li>Pós graduado em Gestão de Tributos e planejamento tributário pela FGV.</li>
                 </div>
-                <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/WALTER-FLORESTO.png" class="img-fluid" alt="team-3">
                     </div>
                     <h4>Walter Floresto</h4>
                     <p>Sócio</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <li>Atua a mais de 10 anos na área tributária;</li>
+                    <li>Graduado em Ciências Contábeis pelo Mackenzie;</li>
+                    <li>Pós-Graduado em MBA em Gestão Tributária pelo Instituto Nacional de Pós Graduação – INPG;</li>
+                    <li>Possui larga experiência em tributos Indiretos – PIS, COFINS, ICMS e IPI.</li>
                 </div>
             </div>
         </div>
