--- a/icms.html
+++ b/icms.html
@@ -102,14 +102,18 @@
                 <div class="row">
                     <div class="col-md-8 offset-md-2">
                         <div class="caption">
-                            <h1 class="section-title">BOOKEEPERS</h1>
-                            <h3 class="sub">Clique para acessar a ferramenta desejada</h3>
+                            <h1 class="section-title">BKPS ICMS</h1>
+                            <h2 class="sub">Ressarcimento, Complemento e Crédito de ICMS nas operações próprias e na condição de Substituto Tributário.</h2>
                             <br/>
                         </div>
+                    </div>
+                    <div class="col-md-12">
+                        <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/perdcomp1.png" alt="dfe">
                     </div>
                 </div>
             </div>
         </div>
+
 
     <!-- ==============================================
     ABOUT 
@@ -118,20 +122,22 @@
     <section id="about">
         <div class="container">
             <div class="row mx-auto">
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <h4>GED BKPS</h4>
-                    <p>Gestor de Documentos Fiscais Eletrônicos</p>
-                    <a class="btn btn-block btn-secondary" href="https://ged.bkps.com.br">Login</a>
+                <div class="col-md">
+                    <h4>Título</h4>
+                    <br/>
+                    <p>Texto sobre o BKPS ICMS.</p>
                 </div>
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".3s">
-                    <h4>BKPS Platform</h4>
-                    <p>Plataforma de soluções tecnológicas desenvolvida pela BKPS</p>
-                    <a class="btn btn-block btn-secondary" href="https://platform.bkps.com.br">Login</a>
-                </div>
-                <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
-                    <h4>Agenda BKPS</h4>
-                    <p>CRM dos associados/parceiros Bookeepers</p>
-                    <a class="btn btn-block btn-secondary" href="https://agenda.bkps.com.br">Login</a>
+            </div>
+            <div class="row mx-auto">
+                <div class="col-md">
+                    <br/>
+                    <br/>
+                    <p>Desfrute do universo de soluções tecnológicas preparadas pela BKPS para apoiá-lo na busca constante
+                        por redução de custos e riscos e o aumento da performance e governança do seu negócio.</p>
+                    <br/>
+                    <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".3s">
+                        <a class="btn btn-secondary" href="http://platform.bkps.com.br">CLIQUE AQUI PARA ACESSAR</a>
+                    </div>
                 </div>
             </div>
         </div>
