--- a/index.html
+++ b/index.html
@@ -60,15 +60,12 @@
     <header id="home">
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">BOOKEEPERS</a>
+                <a class=" navbar-brand" href="index.html">BOOKEEPERS</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="material-icons">menu</i></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#home">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#services">Quem Somos</a>
+                            <a class="nav-link page-scroll" href="#home">Início</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="platform.html">Soluções</a>
@@ -90,6 +87,7 @@
                 </div>
             </div>
         </nav>
+    </header>
 
         <div class="banner">
             <div class="container">
@@ -105,26 +103,21 @@
                 </div>
             </div>
         </div>
-    </header>
 
     <section id="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                    <h4>Segurança</h4>
+                <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".2s">
+                    <i data-vi="user" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
+                    <h4>+ 1.800 clientes</h4>
                 </div>
-                <div class="col-md-3 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
-                    <i data-vi="chat" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                    <h4>Confiança</h4>
+                <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
+                    <i data-vi="newspaper" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
+                    <h4>R$ 350 milhões de créditos apurados em 2017</h4>
                 </div>
-                <div class="col-md-3 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
+                <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
                     <i data-vi="website" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                    <h4>Diagnóstico Completo</h4>
-                </div>
-                <div class="col-md-3 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".8s">
-                    <i data-vi="chat" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
-                    <h4>Suporte</h4>
+                    <h4>100% de efetividade</h4>
                 </div>
             </div>
         </div>
@@ -133,24 +126,28 @@
     <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-md-5 wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <h3>Quem Somos</h3>
+                <div class="col-md-8 text-center mx-auto">
+                    <h2 class="section-title">Quem Somos:</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5" data-wow-duration=".5s" data-wow-delay=".2s">
                     <p>
                         A Bookeepers atua desde 1994 auxiliando empresas na correta aplicação da legislação tributária, visando a obtenção de economia tributária sustentável, racionalizando o recolhimento de tributos e eliminando potenciais riscos fiscais.
                         Todas as soluções são desenvolvidas em estrita conformidade com as normas do Fisco, em esfera administrativa, sem necessidade de qualquer discussão ou medida judicial para seu aproveitamento.
                     </p>
                 </div>
-                <div class="col-md-6 wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".5s">
+                <div class="col-md-6" data-wow-duration=".5s" data-wow-delay=".5s">
                     <div class="img-table">
                         <img src="imgs/brands/logo1.png" class="img-fluid" alt="table">
                     </div>
                 </div>
             </div>
             <div class="row seconde">
-                <div class="col-md-7 wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-7" data-wow-duration=".5s" data-wow-delay=".2s">
                     <img src="imgs/business.jpg" class="img-fluid" alt="update">
                 </div>
-                <div class="col-md-5 wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".5s">
+                <div class="col-md-5" data-wow-duration=".5s" data-wow-delay=".5s">
                     <div class="caption">
                         <h3>Rede de Associados</h3>
                         <p>
@@ -214,9 +211,14 @@
                     <h4>BKPS PIS/COFINS</h4>
                     <p>Relatórios avançados de análise tributária de obrigações acessórias com o olhar especialista da BKPS.</p>
                 </div>
-                <div class="col-md-4 mx-auto text-center">
+                <div class="mx-auto text-center">
                     <br/>
-                    <a class="btn btn-block btn-secondary" href="platform.html">Conheça!</a>
+                    <div class="caption text-nowrap">
+                        <br/>
+                        <h3>Tudo em um único lugar!</h3>
+                        <br/>
+                    </div>
+                    <a class="btn btn-block btn-secondary" href="platform.html">Conheça a BKPS Platform!</a>
                 </div>
             </div>
         </div>
