--- a/perdcomp.html
+++ b/perdcomp.html
@@ -67,44 +67,53 @@
     =============================================== -->
 
     <header id="home">
-
-        <!-- /// Navbar /// -->
-
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <!-- // Brand // -->
-
-                <a class="navbar-brand" href="#">BOOKEEPERS</a>
+                <a class=" navbar-brand" href="index.html">BOOKEEPERS</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="material-icons">menu</i></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <!-- / NavLinks / -->
-
                     <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#home">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="platform.html">Soluções</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="equipe.html">Equipe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="clientes.html">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#contact">Contato</a>
+                        </li>
                         <li>
-                            <a class="btn btn-primary" href="index.html">Ir para home</a>
+                            <a class="btn btn-primary" href="login.html">Login</a>
                         </li>
                     </ul>
 
                 </div>
             </div>
         </nav>
-
         <!-- /// BANNER /// -->
         <div class="banner">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 offset-md-2">
                         <div class="caption">
-                            <h1 class="section-title">BKPS PerdComp</h1>
+                            <h1 class="section-title">BKPS Perdcomp</h1>
                             <h2 class="sub">Monitoramento de Pedido Eletrônico de Restituição, Ressarcimento ou Reembolso e Declaração de Compensação.</h2>
-                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/perdcomp1.png" alt="dfe">
                             <br/>
                         </div>
+                    </div>
+                    <div class="col-md-12">
+                        <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/perdcomp1.png" alt="dfe">
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+
 
     <!-- ==============================================
     ABOUT 
@@ -113,20 +122,22 @@
     <section id="about">
         <div class="container">
             <div class="row mx-auto">
-                <div class="col-md wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <h4>Título sobre PerdComp</h4>
+                <div class="col-md">
+                    <h4>Título</h4>
                     <br/>
-                    <p>Texto sobre o BKPS PerdComp.</p>
+                    <p>Texto sobre o BKPS Perdcomp.</p>
                 </div>
             </div>
-            <br/>
-            <br/>
             <div class="row mx-auto">
-                <div class="col-md wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md">
                     <br/>
                     <br/>
                     <p>Desfrute do universo de soluções tecnológicas preparadas pela BKPS para apoiá-lo na busca constante
                         por redução de custos e riscos e o aumento da performance e governança do seu negócio.</p>
+                    <br/>
+                    <div class="col-md wow bounceIn" data-wow-duration=".5s" data-wow-delay=".3s">
+                        <a class="btn btn-secondary" href="http://platform.bkps.com.br">CLIQUE AQUI PARA ACESSAR</a>
+                    </div>
                 </div>
             </div>
         </div>
